Fix URL wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,25 @@
   border: 0px;
 }
 
+.media.signpost-email .media-body a,
+.media.signpost-website .media-body a {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever
+  word-break: break-all;*/
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 .media.signpost-phone .media-body p,
 .media.signpost-email .media-body p,
 .media.signpost-website .media-body p,
